# CDS-online-oh

./: .gitignore  LICENSE  README.md  dockerfile  index.js  requirements.txt
app/: __init__.py  app.py  db.py  logic.py  models.py  oh.db
app/tmp/: test.db
client/: dockerfile  nginx.conf  package.json
client/src/: App.js  Classes.js  Student.json  Waitlist.json  course.js  environment.module.css  help.js  history.js  index.js  settings.js  staff.js
frontend/: package-lock.json  package.json
frontend/src/: App.js  Classes.js  course.js  environment.module.css  history.js  index.js
server/: .flake8  .gitignore  Dockerfile  app.json  app.py  pyproject.toml
server/app/: __init__.py  db.py  dummy_setup.py  schema.py  utils.py
server/app/config/: config.cfg.example
server/app/database/: base.py  model_questions.py  model_users.py
server/app/database/dummy_data/: courses.json  questions.json  users.json
server/app/schemas/: schema_question.py  schema_user.py
server/oldApp/: app.py
server/oldApp/templates/: home.html
